[package]
name = "twatch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#st7789 = { git = "https://github.com/almindor/st7789.git", branch = "master", features = ["graphics"] }
st7789 = { path = "../st7789", features = ["batch", "graphics"] }
#axp20x = { git = "https://github.com/pyaillet/axp20x-rs.git", branch = "main" }
axp20x = { path = "../axp20x-rs" }
xtensa-lx-rt = "0.5"
xtensa-lx = "0.3"
panic-halt = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-hal = "0.2"
embedded-graphics = "0.7"
nb = "0.1"

# because we cant have optional dev-deps, these must go here
esp32 = { version = "0.10" }
esp32-hal = { git = "https://github.com/esp-rs/esp32-hal.git", branch = "master" }

