[package]
name = "twatch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# devices
st7789 = { version = "0.6", features = [ "graphics", "batch" ]}
axp20x = { git = "https://github.com/pyaillet/axp20x-rs.git", branch = "main" }
pcf8563 = "0.1"

# arch
xtensa-lx-rt = "0.5"
xtensa-lx = "0.3"

panic-halt = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-hal = "0.2"
shared-bus = "0.2"
embedded-graphics = "0.7"
nb = "0.1"

# because we cant have optional dev-deps, these must go here
# platform
esp32 = { version = "0.10" }
esp32-hal = { git = "https://github.com/esp-rs/esp32-hal.git", branch = "master" }

